# student-management-system

./: .env.example  .gitignore  ARCHITECTURE.md  COMPLETION_SUMMARY.md  DOCUMENTATION_INDEX.md  PROJECT_SUMMARY.md  QUICK_REFERENCE.md  README.md  SETUP_GUIDE.md  build.py  manage.py  pyproject.toml  requirements.txt
apps/accounts/: admin.py  models.py  tests.py  urls.py  views.py
apps/accounts/management/commands/: seed_demo_accounts.py
apps/accounts/migrations/: 0001_initial.py
apps/admin_panel/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
apps/admin_panel/migrations/: 0001_initial.py
apps/staff/: admin.py  models.py  tests.py  urls.py  views.py
apps/staff/migrations/: 0001_initial.py
apps/student/: admin.py  models.py  tests.py  urls.py  views.py
apps/student/management/commands/: create_sample_data.py
apps/student/migrations/: 0001_initial.py
static/css/: style.css
student_system/: asgi.py  settings.py  urls.py  wsgi.py
templates/: home.html
templates/accounts/: login.html  profile.html  signup.html  staff_login.html
templates/admin/: add_course.html  admin_panel.html  delete_course.html  edit_course.html  manage_courses.html  manage_users.html  reports.html
templates/base/: base.html
templates/staff/: dashboard.html  enter_grades.html  my_courses.html  take_attendance.html  view_attendance.html
templates/student/: dashboard.html  my_attendance.html  my_courses.html  my_fees.html  my_marks.html
